fixtures/cs-hash-03/bad/pbkdf2-sync-4096.ts
import { pbkdf2Sync } from "crypto";

export function hashPassword(password: string, salt: string) {
	return pbkdf2Sync(password, salt, 4096, 32, "sha256");
}
